unpackaged/main/default/objects/Account/fields/font_color_FF0000_Test__c.field-meta.xml
<CustomField>
    <fullName>font_color_FF0000_Test__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&lt;font color=&#39;#FF0000&#39;&gt; Test</label>
    <type>Text</type>
</CustomField>