unpackaged/main/default/objects/Account/fields/Old_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Address__c</fullName>
    <formula>Old_Street__c + Old_City__c + Old_State__c + Old_Postal_Code__c + Old_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Billing Address</label>
    <type>Text</type>
</CustomField>