unpackaged/main/default/objects/Account/fields/Old_City__c.field-meta.xml
<CustomField>
    <fullName>Old_City__c</fullName>
    <label>Old City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>