unpackaged/main/default/objects/Account/fields/Old_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Country__c</fullName>
    <label>Old Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>