unpackaged/main/default/objects/Account/fields/Old_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Postal_Code__c</fullName>
    <label>Old Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>