unpackaged/main/default/objects/Account/fields/Old_State__c.field-meta.xml
<CustomField>
    <fullName>Old_State__c</fullName>
    <label>Old State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>