unpackaged/main/default/objects/Account/fields/Old_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Street__c</fullName>
    <label>Old Street</label>
    <type>TextArea</type>
</CustomField>