unpackaged/main/default/objects/Account/fields/Subscriptions_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscriptions (Subscriber)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subscriber</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions (Subscriber)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>