unpackaged/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Id)), Parent.Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Parent.Id)), Parent.Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Parent.Id)), Parent.Parent.Id,
IF(NOT(ISBLANK(Parent.Id)),Parent.Id,
Id))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent</label>
    <type>Text</type>
</CustomField>