unpackaged/main/default/objects/Account/recordTypes/Recipient.recordType-meta.xml
<RecordType>
    <fullName>Recipient</fullName>
    <active>true</active>
    <label>Recipient</label>
</RecordType>